# boljeuredjenazemlja

./: .env.example  .gitignore  .markdownlint.json  CLAUDE.md  LICENSE  README.md  REFACTORING_TODO.md  build_translations.py  pyproject.toml
api/: README.md  pyproject.toml
api/docs/: pydantic-entities-implementation.md
api/examples/: batch_parcels_ids.csv  gis_parcel_geometry.py  lr_unit_example.py  municipality_search.py
api/src/cadastral_api/: exceptions.py  i18n.py
api/src/cadastral_api/client/: api_client.py
api/src/cadastral_api/gis/: cache.py
api/src/cadastral_api/locale/en/LC_MESSAGES/: cadastral.mo
api/src/cadastral_api/locale/hr/LC_MESSAGES/: cadastral.mo
api/src/cadastral_api/models/: __init__.py  entities.py  gis_entities.py
api/src/cadastral_api/tests/: __init__.py  test_batch_input_parsers.py  test_batch_processor.py
api/tests/unit/: test_exceptions.py  test_lr_unit_models.py  test_validation.py
cli/: README.md  pyproject.toml
cli/docs/: command-reference.md
cli/src/cadastral_cli/: __init__.py  __main__.py  batch_processor.py  formatters.py  input_parsers.py  lr_unit_output.py  main.py
cli/src/cadastral_cli/commands/: batch.py  batch_lr_unit.py  cache.py  discovery.py  gis.py  parcel.py  registry.py  search.py
docs/: CLI.md  README.md  cli-reference.md  croatian-cadastral-api-specification.md  documentation-structure.md  i18n-status.md  linting-guide.md  localization_example.py  lr-unit-implementation-plan.md  mcp-usage-guide.md  naming-conventions.md  pylint-setup-summary.md  quick-lint-reference.md  refactoring-todo.md  specs-readme.md  translation-status.md
examples/: basic_usage.py  batch_parcels.csv  municipality_search.py
mcp/: README.md  pyproject.toml
mcp/docs/: claude-usage-guide.md  mcp-server.md
mcp/src/cadastral_mcp/: README.md  config.py  main.py  prompts.py  resources.py  server.py  tools.py
mock-server/: QUICKSTART.md  README.md
mock-server/data/: offices.json
mock-server/data/lr-units/: 21277-657.json  21277-769.json
mock-server/data/parcels/: 334731.json
mock-server/src/: main.py
mock_server/: README.md  main.py
mock_server/data/: municipalities.json
mock_server/data/parcels/: 334979.json
po/: cadastral.pot  en.po  hr.po
scripts/: compile_translations.sh  debug_api_response.py  generate_pot.sh  init_language.sh  update_translations.sh
specs/: Croatian_Cadastral_API_Specification.md  I18N_IMPLEMENTATION_STATUS.md  README.md  croatian-cadastral-api-specification.md  documentation-structure.md  i18n-guide.md  i18n-status.md  linting-guide.md  lr-unit-implementation-plan.md  mcp-server.md  naming-conventions.md  pylint-setup-summary.md  refactoring-todo.md
src/cadastral_api/: __init__.py  __main__.py
src/cadastral_api/cli/: __init__.py  batch_processor.py  formatters.py  main.py
src/cadastral_api/cli/commands/: batch.py  cache.py  discovery.py  gis.py  parcel.py  search.py
src/cadastral_api/client/: __init__.py
src/cadastral_api/gis/: __init__.py  parser.py
src/cadastral_api/models/: __init__.py
src/cadastral_api/tests/: test_batch_processor.py
src/mcp/: __init__.py  http_server.py  prompts.py  server.py
