[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "croatian-cadastral-api"
version = "0.1.0"
description = "Python client for Croatian Cadastral System (Uređena zemlja) API"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    "mcp>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
cadastral = "cadastral_api.cli.main:cli"
cadastral-mcp = "mcp.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/croatian-cadastral-api"
Documentation = "https://github.com/yourusername/croatian-cadastral-api/blob/main/README.md"
Repository = "https://github.com/yourusername/croatian-cadastral-api"

[tool.setuptools.packages.find]
where = ["src"]

# Include compiled translation files (.mo) in the package
[tool.setuptools.package-data]
cadastral_api = ["locale/*/LC_MESSAGES/*.mo"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["src/cadastral_api/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=cadastral_api --cov-report=term-missing"
