[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "croatian-cadastral-api"
version = "0.1.0"
description = "Python SDK for Croatian Cadastral System (Uređena zemlja) API"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pylint>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/croatian-cadastral-api"
Documentation = "https://github.com/yourusername/croatian-cadastral-api/blob/main/api/README.md"
Repository = "https://github.com/yourusername/croatian-cadastral-api"

[tool.setuptools.packages.find]
where = ["src"]

# Include compiled translation files (.mo) in the package
[tool.setuptools.package-data]
cadastral_api = ["locale/*/LC_MESSAGES/*.mo"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=cadastral_api --cov-report=term-missing"

[tool.pylint.main]
py-version = "3.12"
jobs = 0  # Use all available CPUs

[tool.pylint.messages_control]
# Disable some overly strict checks while keeping best practices
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "fixme",  # Allow TODO comments
]

[tool.pylint.format]
max-line-length = 100  # Match ruff configuration

[tool.pylint.design]
max-attributes = 12
max-args = 8

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "ok"]
